[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/plaguedoctor.png" type="Texture" id=1]
[ext_resource path="res://art/plaguedoctor_armout.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://crow.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 63.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "armout",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array(  )
}

[node name="Player" type="Area2D"]
gravity_distance_scale = 10.0
script = ExtResource( 3 )

[node name="Player_KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )
crow_scene = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_KinematicBody2D"]
position = Vector2( -3, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player_KinematicBody2D"]
frames = SubResource( 2 )
animation = "walk"

[node name="JumpTimer" type="Timer" parent="Player_KinematicBody2D"]

[node name="Camera2D" type="Camera2D" parent="Player_KinematicBody2D"]
current = true
smoothing_enabled = true

[node name="crowSpawnPoint" type="Path2D" parent="Player_KinematicBody2D"]
position = Vector2( 32, -8 )
curve = SubResource( 3 )

[connection signal="timeout" from="Player_KinematicBody2D/JumpTimer" to="Player_KinematicBody2D" method="_on_JumpTimer_timeout"]
